--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,24 +9,7 @@
 
   <body>
 
-    <header>
-      <div class="container">
-        <h1>{{ site.title | default: site.github.repository_name }}</h1>
-        <h2>{{ site.description | default: site.github.project_tagline }}</h2>
-
-        <section id="downloads">
-          {% if site.show_downloads %}
-            <a href="{{ site.github.zip_url }}" class="btn">Download as .zip</a>
-            <a href="{{ site.github.tar_url }}" class="btn">Download as .tar.gz</a>
-          {% endif %}
-          <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-
-        <section id="dropdown_menu">
-          {% include dropdown_menu.html %}
-        </section>
-      </div>
-    </header>
+      {% include header.html %}
 
     <div class="container">
       <section id="main_content">
@@ -34,17 +17,11 @@
       </section>
     </div>
 
-    {% if site.google_analytics %}
-      <script type="text/javascript">
-        var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-        document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-      </script>
-      <script type="text/javascript">
-        try {
-          var pageTracker = _gat._getTracker("{{ site.google_analytics }}");
-        pageTracker._trackPageview();
-        } catch(err) {}
-      </script>
-    {% endif %}
+    <div class="container">
+      <section id="footer">
+        {% include footer.html %}
+      </section>
+    </div>
+
   </body>
 </html>
