Lots of minor edits for readabilaty of code and modulataty...
Local tests of auto-generated navigation now working sufficently to let it
lose upon the pages public branch, more code cleaning will be neaded to
ensure that furture modders are informed of rendering logics. Internal
links within documents will need re-writing to make use of the
gen_mklink.html functions for ensuring that local vs external links are
visually differant from one another, however, the skeliton of css
colorizing is now present and should work for tests.

--- a/_includes/build_info.html
+++ b/_includes/build_info.html
@@ -24,7 +24,8 @@
     Issues URL: {{site.github.issues_url}}
     ## Build enviroment info
     Enviroment: {{site.github.environment}}
-    Pages enviroment: {{site.github.pages_env}}
+    Pages (GitHub) enviroment: {{site.github.pages_env}}
+    Pages (Jekyll) enviroment: {{jekyll.environment}}
     Pages hostname: {{site.github.pages_hostname}}
     GitHub API url: {{site.github.api_url}}
     Site time: {{site.time}}
