--- a/_includes/build_info.html
+++ b/_includes/build_info.html
@@ -4,71 +4,48 @@
 {% include comment_handler.html comment_message=comment_message %}
 {% endcomment %}
 
-{% capture comment_message %}
+{% assign parse_sub_arrays = 'no' %}
+
+<h2>GitHub API information available</h2>
 {% for responce in site.github %}
-  {% unless site.github[responce] == nil %}
+  {% case responce in %}
+    {% when "contributors" or "public_repositories" or "versions" %}
+<h3>Known array in array: {{responce}}</h3><p>Perant for loop info</p>
+{% capture comment_message %}
+    Example direct call: site.github.{{responce}}
+    Variable or array name  | Current value held
+    ------------------------|-------------------
+    forloop.index0          | {{forloop.index0}}
+    responce                | {{responce}}
+{% endcapture %}
+      {% include comment_handler.html comment_message=comment_message message_formatting=md %}
+      {% if parse_sub_arrays == 'yes' %}
+        {% assign sub_array = site.github[responce] | split: "," %}
+        {% for sub_index in sub_array %}
+          {% assign var_arr_name = sub_index | split: '=>' | first | remove: "[" | remove: '{' | remove: '"' | lstrip %}
+          {% assign var_arr_value = sub_index | split: '=>' | last | remove: "]" | remove: '}' | remove: '"' | rstrip %}
+{% capture comment_message_two %}
+    Variable or array name | Current value held
+    -----------------------|-------------------
+    forloop.index0         | {{forloop.index0}}
+    sub_index              | {{sub_index}}
+    var_arr_name           | {{var_arr_name}}
+    var_arr_value          | {{var_arr_value}}
+{% endcapture %}
+<h4>Sub array info</h4>
+          {% include comment_handler.html comment_message=comment_message_two message_formatting=md %}
+        {% endfor %}
+      {% endif %}
+    {% else %}
+<h3>String value within: {{responce}}</h3>
+{% capture comment_message %}
+    Example direct call: site.github.{{responce}}
     Variable or array name  | Current value held
     ------------------------|-------------------
     forloop.index0          | {{forloop.index0}}
     responce                | {{responce}}
     site.github[responce]   | {{site.github[responce]}}
-  {% else %}
-    Variable or array name  | Current value held
-    ------------------------|-------------------
-    forloop.index0          | {{forloop.index0}}
-    responce                | {{responce}}
-    site.github[responce]   | nil
-  {% endunless %}
-{% endfor %}
 {% endcapture %}
-{% include comment_handler.html comment_message=comment_message message_formatting=md %}
-
-{% comment %}
-{% capture comment_message %}
-    # GitHub API results
-    ## Repository spicific info ##
-    Name: {{site.github.repository_name}}
-    Source: {{site.github.repository_url}}
-    Language: {{site.github.language}}
-    Releases: {{site.github.releases_url}}
-    Build revision: {{site.github.build_revision}}
-    Project tag line: {{site.github.project_tagline}}
-    Project title: {{site.github.project_title}}
-    ## Download links ##
-    Show downloads: {{site.github.show_downloads}}
-    Clone URL: {{site.github.clone_url}}
-    ZIP URL: {{site.github.zip_url}}
-    Tar URL: {{site.github.tar_url}}
-    ## File paths ##
-    Base URL: {{site.github.baseurl}}
-    Issues URL: {{site.github.issues_url}}
-    ## Build enviroment info
-    Enviroment: {{site.github.environment}}
-    Pages (GitHub) enviroment: {{site.github.pages_env}}
-    Pages (Jekyll) enviroment: {{jekyll.environment}}
-    Pages hostname: {{site.github.pages_hostname}}
-    GitHub API url: {{site.github.api_url}}
-    Site time: {{site.time}}
-    Jekyll version: {{site.github.versions.jekyll}}
-    Theme version: {{site.github.versions.jekyll-theme-hacker}}
-    Ruby version: {{site.github.versions.ruby}}
-    gh-pages version: {{site.github.versions.github-pages}}
-    Is a project page: {{site.github.is_project_page}}
-    Is a user page: {{site.github.is_user_page}}
-    ## Misc. links ##
-    Help URL: {{site.github.help_url}}
-    Owner gravatar URL: {{site.github.owner_gravatar_url}}
-    ## Owner/Author info ##
-    Owner name: {{site.github.owner_name}}
-    Owner site: {{site.github.owner_url}}
-
-{% endcapture %}
-{% include comment_handler.html comment_message=comment_message %}
-{% endcomment %}
-
-{% comment %}
-## Repositories info ##
-{% for repo_info in site.github.public_repositories %}
-  {{repo_info}}
+    {% include comment_handler.html comment_message=comment_message message_formatting=md %}
+  {% endcase %}
 {% endfor %}
-{% endcomment %}
